--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+
     <title>TODO By Kevin Romero</title>
 </head>
 <body>
@@ -40,7 +44,9 @@
                       </svg>
                 </div>
             </div>
-            <a href="#">New Task</a>
+            <div class="btnContainer">
+                <a href="#" class="btnAddTaks">New Task</a>
+            </div>
         </div>
     </div>
 </body>
