--- a/index.html
+++ b/index.html
@@ -5,49 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 
-    <title>TODO By Kevin Romero</title>
+    <title>TODO By Kevin Romero WITH Tailwindcss</title>
 </head>
-<body>
-    <div class="main">
+<body class="bg-sky-300 flex justify-center items-center h-screen">
+    <div class="bg-white p-4 rounded-lg shadow-lg w-full max-w-2xl">
         <header>
-            <nav>
-                <div class="titleContainer">
-                    <h2>Website TODO</h2>
-                </div>
-            </nav>
+            <h1 class="text-center text-3xl font-bold text-sky-500 uppercase">Todo List</h1>
+            <div>
+                <form class="flex justify-center mt-5" action="#">
+                    <input type="text" placeholder="Enter Todo" class="text-xl text-sky-500 placeholder-sky-200 outline-none py-1 border-sky-300 border-b-2">
+                    <button class="bg-sky-500 text-white ml-2 p-2 rounded-lg opacity-50 hover:opacity-100 active:scale-90">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </header>
 
-        <div class="content">
-            <div class="taksContainer">
-                <div class="taks">
-                    <input type="checkbox">
-                    <span>Lorem ipsum dolor sit amet.</span>
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
-                      </svg>
-                </div>
-                <div class="taks">
-                    <input type="checkbox">
-                    <span>Lorem ipsum dolor sit amet.</span>
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
-                      </svg>
-                </div>
-                <div class="taks">
-                    <input type="checkbox">
-                    <span>Lorem ipsum dolor sit amet.</span>
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
-                      </svg>
-                </div>
+        <div class="mt-7 p-3 max-h-80 overflow-y-auto flex justify-center flex-wrap">
+            <div class="bg-sky-200 flex items-center py-2 px-5 my-3 text-sky-800 rounded-lg w-full h-min cursor-pointer opacity-70 hover:opacity-100 active:scale-95">
+                <p>#1</p>
+                <p class="w-full mx-7 text-md">learning php</p>
+                <button class="text-sky-800 opacity-50 hover:opacity-100 active:scale-90">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+                </button>
             </div>
-            <div class="btnContainer">
-                <a href="#" class="btnAddTaks">New Task</a>
+
+            <div class="bg-sky-200 flex items-center py-2 px-5 my-3 text-sky-800 rounded-lg w-full h-min">
+                <p>#1</p>
+                <p class="w-full mx-7 text-md">learning php</p>
+                <button class="text-sky-800 opacity-50 hover:opacity-100 active:scale-90">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+                </button>
             </div>
+            
         </div>
     </div>
+
 </body>
 </html>
