--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h1 class="text-center text-3xl font-bold text-sky-500 uppercase">Todo List</h1>
             <div>
                 <form class="flex justify-center mt-5" action="#">
-                    <input type="text" placeholder="Enter Todo" class="text-xl text-sky-500 placeholder-sky-200 outline-none py-1 border-sky-300 border-b-2">
-                    <button class="bg-sky-500 text-white ml-2 p-2 rounded-lg opacity-50 hover:opacity-100 active:scale-90">
+                    <input id="inputTodo" type="text" placeholder="Escribe la tarea" class="text-xl text-sky-500 placeholder-sky-200 outline-none py-1 border-sky-300 border-b-2">
+                    <button id="btnAddTodo" class="bg-sky-500 text-white ml-2 p-2 rounded-lg opacity-50 hover:opacity-100 active:scale-90">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
                         </svg>
@@ -25,8 +25,8 @@
             </div>
         </header>
 
-        <div class="mt-7 p-3 max-h-80 overflow-y-auto flex justify-center flex-wrap">
-            <div class="bg-sky-200 flex items-center py-2 px-5 my-3 text-sky-800 rounded-lg w-full h-min cursor-pointer opacity-70 hover:opacity-100 active:scale-95">
+        <div id="todoContainer" class="mt-7 p-3 max-h-80 overflow-y-auto flex justify-center flex-wrap">
+            <!-- <div class="bg-sky-200 flex items-center py-2 px-5 my-3 text-sky-800 rounded-lg w-full h-min cursor-pointer opacity-70 hover:opacity-100 ">
                 <p>#1</p>
                 <p class="w-full mx-7 text-md">learning php</p>
                 <button class="text-sky-800 opacity-50 hover:opacity-100 active:scale-90">
@@ -34,18 +34,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg>
                 </button>
-            </div>
-
-            <div class="bg-sky-200 flex items-center py-2 px-5 my-3 text-sky-800 rounded-lg w-full h-min">
-                <p>#1</p>
-                <p class="w-full mx-7 text-md">learning php</p>
-                <button class="text-sky-800 opacity-50 hover:opacity-100 active:scale-90">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-8 h-8">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M9.75 9.75l4.5 4.5m0-4.5l-4.5 4.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                    </svg>
-                </button>
-            </div>
-            
+            </div> -->
         </div>
     </div>
 
